--- a/KarskiCiemny.css
+++ b/KarskiCiemny.css
@@ -1,41 +1,46 @@
 body {
-    font-family: "Times New Roman";
+    font-family: Times New Roman;
 }
 #BackgroundUp {
     display: inline-block;
-    background-color: rgb(0, 32, 129);
+    background-color: #4b5f75;
     height: 20%;
-      position: absolute;
-      top: 0;
-      left: center;
-      width: 100%;
+    position: absolute;
+    top: 0px;
+    left: 100px;
+    width: 1820px;
 }
 #Foreground {
     display: inline-block;
-    background-color:#232323;
+    background-color:#3f3f3f;
     height: 100%;
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 18%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 18%;
+}
+
+#PhotoStretch {
+    width:1580px;
+    height:100%;
 }
 
 #Photo {
     background-color: rgb(255, 0, 221);
     height:30%;
     position: absolute;
-    top: 15%;
-    left: center;
-    width: 100%;
+    top: 14%;
+    left: 340px;
+    width: 25%;
 
 }
 
 #BackgroundDown {
     display: inline-block;
-    background-color:#232323;
-    height: 50%;
-      position: absolute;
-      top: 50%;
-      left: center;
-      width: 100%;
+    background-color:#4b5f75;
+    height: 542px;
+    position: absolute;
+    top: 44%;
+    left: center;
+    width: 1912px;
 }
